add geist2-organization info labels

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -226,7 +226,7 @@
         <input type="text" name="attr_character_name">
         <div class="spacer"></div>
         <div class="input-label">
-            <span class="mortal vampire1 werewolf1 mage promethean1 changeling1 geist1 mummy1 hunter demon" data-i18n="virtue" >Virtue:</span>
+            <span class="mortal vampire1 werewolf1 mage promethean1 changeling1 geist1 geist2-organization mummy1 hunter demon" data-i18n="virtue" >Virtue:</span>
             <span class="vampire2" data-i18n="mask" >Mask:</span>
             <span class="werewolf2" data-i18n="blood" >Blood:</span>
             <span class="beast" data-i18n="life" >Life:</span>
@@ -237,7 +237,7 @@
         <div class="spacer"></div>
         <div class="input-label">
             <span class="mortal1 mortal2" data-i18n="age" >Age:</span>
-            <span class="mortal2-organization" data-i18n="doctrine" >Doctrine:</span>
+            <span class="mortal2-organization geist2-organization" data-i18n="doctrine" >Doctrine:</span>
             <span class="vampire" data-i18n="clan" >Clan:</span>
             <span class="werewolf" data-i18n="auspice" >Auspice:</span>
             <span class="mage" data-i18n="path" >Path:</span>
@@ -258,7 +258,7 @@
         <div class="spacer"></div>
         <div class="input-label">
             <span class="mortal1 mortal2 vampire1 werewolf1 mage promethean1 changeling1 geist1 mummy1 hunter demon" data-i18n="vice" >Vice:</span>
-            <span class="mortal2-organization" data-i18n="creed" >Creed:</span>
+            <span class="mortal2-organization geist2-organization" data-i18n="creed" >Creed:</span>
             <span class="vampire2" data-i18n="dirge" >Dirge:</span>
             <span class="werewolf2" data-i18n="bone" >Bone:</span>
             <span class="beast" data-i18n="legend" >Legend:</span>
@@ -269,7 +269,7 @@
         <div class="spacer"></div>
         <div class="input-label">
             <span class="mortal1 mortal2" data-i18n="faction" >Faction:</span>
-            <span class="mortal2-organization" data-i18n="doctrine" >Doctrine:</span>
+            <span class="mortal2-organization geist2-organization" data-i18n="doctrine" >Doctrine:</span>
             <span class="vampire" data-i18n="bloodline" >Bloodline:</span>
             <span class="werewolf" data-i18n="tribe" >Tribe:</span>
             <span class="mage" data-i18n="order" >Order:</span>
@@ -295,7 +295,7 @@
         <div class="spacer"></div>
         <div class="input-label">
             <span class="mortal1 mortal2" data-i18n="group-name" >Group Name:</span>
-            <span class="mortal2-organization" data-i18n="doctrine" >Doctrine:</span>
+            <span class="mortal2-organization geist2-organization" data-i18n="doctrine" >Doctrine:</span>
             <span class="vampire" data-i18n="covenant" >Covenant:</span>
             <span class="werewolf" data-i18n="lodge" >Lodge:</span>
             <span class="mage" data-i18n="legacy" >Legacy:</span>
