rename "category" to "entity" and "normal" to "corporeal"

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -5,7 +5,7 @@
 <input type="hidden" class="type" name="attr_sheettype" value="mortal1" />
 <input type="hidden" class="game-line" name="attr_game_line" value="mortal" />
 <input type="hidden" class="edition" name="attr_edition" value="1" />
-<input type="hidden" class="category" name="attr_category" value="normal" />
+<input type="hidden" class="entity" name="attr_entity" value="corporeal" />
 
 <!-- SHEET OPTIONS & PAGE TABS-->
 <input type="radio" class="attr sheetoptions settingssheet" name="attr_pagenumber" title="Settings" value="settings" />
@@ -88,7 +88,7 @@
         <button type="action" class="toggle active-geist2-organization" name="act_sheet_type_geist2-organization" title="Geist" data-i18n="sin-eater-krewe">Sin-Eater Krewe</button>
     </div>
 
-    <div class="normal">
+    <div class="corporeal">
         <div class="spacer"></div>
         <div class="spacer"></div>
 
@@ -164,7 +164,7 @@
             <tr>
                 <td>
                     <input type="radio" class="attr" name="attr_rolltype_select" value="Normal" title="Normal" checked="checked" />
-                    <span class="attr" data-i18n="normal" >Normal</span>
+                    <span class="attr" data-i18n="corporeal" >Normal</span>
                 </td>
             </tr>
             <tr>
@@ -313,7 +313,7 @@
     <div class="spacer"></div>
 
     <!-- ATTRIBUTE FIELDS -->
-    <div class="normal 3colrow">
+    <div class="corporeal 3colrow">
         <table class="attributes">
             <tbody>
                 <tr>
@@ -468,7 +468,7 @@
 
     <div class="flex">
         <!-- SKILL FIELDS -->
-        <div class="normal skills">
+        <div class="corporeal skills">
             <table>
                 <tbody>
                     <tr>
@@ -711,7 +711,7 @@
             </table>
         </div>
 
-        <div class="normal horizontal-spacer"></div>
+        <div class="corporeal horizontal-spacer"></div>
 
         <!-- OTHER TRAITS -->
         <div class="grow">
@@ -1550,8 +1550,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="normal el_spacer"></div>
-                    <table class="normal weapontable">
+                    <div class="corporeal el_spacer"></div>
+                    <table class="corporeal weapontable">
                         <tr class="wpnheader">
                             <td data-i18n="weapon-attack" >Weapon/Attack</td><td data-i18n="type" >Type</td><td data-i18n="damage-short" >Dmg</td><td data-i18n="range" >Range</td><td data-i18n="magnitude-short" >Mag</td><td data-i18n="initiative-short" >Ini</td><td data-i18n="strength-short" >Str</td><td data-i18n="size-short">Sz</td>
                         </tr>
@@ -1685,8 +1685,8 @@
                             <td><input type="text" name="attr_attack_size4" class="weaponstat" /></td>
                         </tr>
                     </table>
-                    <div class="normal el_spacer"></div>
-                    <table class="normal weapontable armortable">
+                    <div class="corporeal el_spacer"></div>
+                    <table class="corporeal weapontable armortable">
                         <tr class="wpnheader">
                             <td data-i18n="armor" >Armor</td><td data-i18n="rating" >Rating</td><td data-i18n="strength-short" >Str</td><td data-i18n="defence-short" >Def</td><td data-i18n="speed-short" >Spd</td><td data-i18n="description-armor" >Description</td>
                         </tr>
@@ -1723,7 +1723,7 @@
                 <table class="dottable">
                     <tr>
                         <td class="subheader">
-                            <span class="normal" data-i18n="health">Health</span>
+                            <span class="corporeal" data-i18n="health">Health</span>
                             <span class="mortal2-organization" data-i18n="membership">Membership</span>
                             <span class="geist2-organization" data-i18n="congregation">Congregation</span>
                         </td>
@@ -1877,7 +1877,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="normal healthboxes">
+                            <div class="corporeal healthboxes">
                                 <input type="hidden" name="attr_health" />
                                 <div class="healthbox gt-2 gt-3 gt-4 gt-5 gt-6 gt-7 gt-8 gt-9 gt-10 gt-11 gt-12 gt-13 gt-14 gt-15"></div>
                                 <div class="healthbox gt-2 gt-3 gt-4 gt-5 gt-6 gt-7 gt-8 gt-9 gt-10 gt-11 gt-12 gt-13 gt-14"></div>
@@ -1901,7 +1901,7 @@
                     <tr>
                         <td class="el_spacer"></td>
                     </tr>
-                    <tbody class="normal">
+                    <tbody class="corporeal">
                         <tr>
                             <td class="subheader" data-i18n="willpower">Willpower</td>
                         </tr>
@@ -1915,7 +1915,7 @@
                             <td class="spacer"></td>
                         </tr>
                     </tbody>
-                    <tbody class="normal">
+                    <tbody class="corporeal">
                         <tr>
                             <td class="subheader">
                                 <span class="mortal1 hunter1" data-i18n="morality" >Morality</span>
@@ -2049,7 +2049,7 @@
                             <td class="el_spacer"></td>
                         </tr>
                     </tbody>
-                    <tbody class="normal">
+                    <tbody class="corporeal">
                         <tr>
                             <td class="subheader" data-i18n="specializations">Specializations</td>
                         </tr>
@@ -3118,13 +3118,13 @@
         on(`clicked:sheet_type_${sheettype}`, function () {
             const gameLine = getGameLine(sheettype);
             const edition = getEdition(sheettype);
-            const category = getCategory(sheettype);
+            const entity = getEntity(sheettype);
             
             setAttrs({
                 "sheettype": sheettype,
                 "game_line": gameLine,
                 "edition": edition,
-                "category": category || ""
+                "entity": entity || ""
             });
         });
     });
@@ -3272,7 +3272,7 @@
         }
     }
     
-    var getCategory = function(sheettype) {
+    var getEntity = function(sheettype) {
         switch (sheettype) {
             case "mortal1":
             case "vampire1":
@@ -3294,7 +3294,7 @@
             case "mummy2":
             case "demon":
             case "beast":
-                return "normal";
+                return "corporeal";
             case "mortal2-organization":
             case "geist2-organization":
                 return "organization";
@@ -3448,10 +3448,10 @@
     };
 
     var updateHealth = function() {
-        getAttrs(["stamina","resistance","base_size","giant","small_framed","sheettype","category","resilience","bonus_health"], function(v) {
+        getAttrs(["stamina","resistance","base_size","giant","small_framed","sheettype","entity","resilience","bonus_health"], function(v) {
             var health = 1;
-            switch (v.category) {
-                case "normal":
+            switch (v.entity) {
+                case "corporeal":
                     health = parseInt(v.stamina, 10) + parseInt(v.base_size, 10) + parseInt(v.giant, 10) + parseInt(v.small_framed, 10) + parseInt(v.bonus_health, 10);
                     if(v.sheettype.indexOf("vampire2")) {
                         health = health + parseInt(v.resilience, 10);
