fix normal data-i18n

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -164,7 +164,7 @@
             <tr>
                 <td>
                     <input type="radio" class="attr" name="attr_rolltype_select" value="Normal" title="Normal" checked="checked" />
-                    <span class="attr" data-i18n="corporeal" >Normal</span>
+                    <span class="attr" data-i18n="normal" >Normal</span>
                 </td>
             </tr>
             <tr>
