Add new terms to translation disctionary.

--- a/Paladin/paladin.html
+++ b/Paladin/paladin.html
@@ -518,7 +518,7 @@
 <h1 data-i18n="attitudes"></h1>
 </div>
 <div class="row">
-<button class="text-capitalize" data-i18n="charlemagne" name="roll_attitude-charlemagne" type="roll" value="&{template:rolls} {{header=^{attitude charlemagne}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{attitude_charlemagne}[Threshold]]]}}"></button>
+<button class="text-capitalize" data-i18n="attitude charlemagne" name="roll_attitude-charlemagne" type="roll" value="&{template:rolls} {{header=^{attitude charlemagne}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{attitude_charlemagne}[Threshold]]]}}"></button>
 <label data-i18n-title="enter attitude charlemagne" title="enter attitude charlemagne">
 <input name="attr_attitude_charlemagne" placeholder="#" title="@{attitude_charlemagne}" type="number" value="0"/>
 </label>
@@ -528,7 +528,7 @@
 </label>
 </div>
 <div class="row">
-<button class="text-capitalize" data-i18n="lord" name="roll_attitude-lord" type="roll" value="&{template:rolls} {{header=^{attitude lord}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{attitude_lord}[Threshold]]]}}"></button>
+<button class="text-capitalize" data-i18n="attitude lord" name="roll_attitude-lord" type="roll" value="&{template:rolls} {{header=^{attitude lord}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{attitude_lord}[Threshold]]]}}"></button>
 <label data-i18n-title="enter attitude lord" title="enter attitude lord">
 <input name="attr_attitude_lord" placeholder="#" title="@{attitude_lord}" type="number" value="0"/>
 </label>
@@ -538,7 +538,7 @@
 </label>
 </div>
 <div class="row">
-<button class="text-capitalize" data-i18n="family" name="roll_attitude-family" type="roll" value="&{template:rolls} {{header=^{attitude family}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{attitude_family}[Threshold]]]}}"></button>
+<button class="text-capitalize" data-i18n="attitude family" name="roll_attitude-family" type="roll" value="&{template:rolls} {{header=^{attitude family}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{attitude_family}[Threshold]]]}}"></button>
 <label data-i18n-title="enter attitude family" title="enter attitude family">
 <input name="attr_attitude_family" placeholder="#" title="@{attitude_family}" type="number" value="0"/>
 </label>
@@ -548,7 +548,7 @@
 </label>
 </div>
 <div class="row">
-<button class="text-capitalize" data-i18n="retinue" name="roll_attitude-retinue" type="roll" value="&{template:rolls} {{header=^{attitude retinue}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{attitude_retinue}[Threshold]]]}}"></button>
+<button class="text-capitalize" data-i18n="attitude retinue" name="roll_attitude-retinue" type="roll" value="&{template:rolls} {{header=^{attitude retinue}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{attitude_retinue}[Threshold]]]}}"></button>
 <label data-i18n-title="enter attitude retinue" title="enter attitude retinue">
 <input name="attr_attitude_retinue" placeholder="#" title="@{attitude_retinue}" type="number" value="0"/>
 </label>
@@ -558,7 +558,7 @@
 </label>
 </div>
 <div class="row">
-<button class="text-capitalize" data-i18n="church" name="roll_attitude-church" type="roll" value="&{template:rolls} {{header=^{attitude church}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{attitude_church}[Threshold]]]}}"></button>
+<button class="text-capitalize" data-i18n="attitude church" name="roll_attitude-church" type="roll" value="&{template:rolls} {{header=^{attitude church}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{attitude_church}[Threshold]]]}}"></button>
 <label data-i18n-title="enter attitude church" title="enter attitude church">
 <input name="attr_attitude_church" placeholder="#" title="@{attitude_church}" type="number" value="0"/>
 </label>
@@ -568,7 +568,7 @@
 </label>
 </div>
 <div class="row">
-<button class="text-capitalize" data-i18n="commoners" name="roll_attitude-commoners" type="roll" value="&{template:rolls} {{header=^{attitude commoners}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{attitude_commoners}[Threshold]]]}}"></button>
+<button class="text-capitalize" data-i18n="attitude commoners" name="roll_attitude-commoners" type="roll" value="&{template:rolls} {{header=^{attitude commoners}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{attitude_commoners}[Threshold]]]}}"></button>
 <label data-i18n-title="enter attitude commoners" title="enter attitude commoners">
 <input name="attr_attitude_commoners" placeholder="#" title="@{attitude_commoners}" type="number" value="0"/>
 </label>
@@ -1148,6 +1148,27 @@
 <h2 data-i18n="wounds"></h2>
 <textarea data-i18n-placeholder="wounds" name="attr_wounds" placeholder="wounds"></textarea>
 </div>
+<div class="row three-quarter-hp">
+<label class="styled-checkbox grid" data-i18n-title="3/4 HP" title="3/4 HP">
+<input name="attr_three_quarter_hp" title="@{cthree_quarter_hp}" type="checkbox" value="3/4 HP"/>
+<span class="pictos">3</span>
+</label>
+<h2 data-i18n="3/4 HP = -5 to Actions"></h2>
+</div>
+<div class="row half-hp">
+<label class="styled-checkbox grid" data-i18n-title="1/2 HP" title="1/2 HP">
+<input name="attr_half_hp" title="@{half_hp}" type="checkbox" value="1/2 HP"/>
+<span class="pictos">3</span>
+</label>
+<h2 data-i18n="1/2 HP = -10 to Actions"></h2>
+</div>
+<div class="row one-quarter-hp">
+<label class="styled-checkbox grid" data-i18n-title="1/4 HP" title="1/4 HP">
+<input name="attr_one_quarter_hp" title="@{one_quarter_hp}" type="checkbox" value="1/4 HP"/>
+<span class="pictos">3</span>
+</label>
+<h2 data-i18n="1/4 HP = Unconscious"></h2>
+</div>
 <div class="row chirurgery-needed">
 <label class="styled-checkbox grid" data-i18n-title="chirurgery needed" title="chirurgery needed">
 <input name="attr_chirurgery_needed" title="@{chirurgery_needed}" type="checkbox" value="chirurgery needed"/>
@@ -1183,7 +1204,7 @@
 </label>
 </div>
 
-<div class="row"><h2 class="text-primary" data-i18n="melee"></h2></div>
+<div class="row"><h2 class="text-primary" data-i18n="melee skills"></h2></div>
 
 <div class="row col-3 knight">
 <button class="text-capitalize" data-i18n="axe" name="roll_axe" type="roll" value="&{template:rolls} {{header=^{axe}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{axe}[Threshold]]]}}"></button>
@@ -1265,7 +1286,7 @@
 </div>
 
 
-<div class="row"><h2 class="text-primary" data-i18n="mounted"></h2></div>
+<div class="row"><h2 class="text-primary" data-i18n="mounted skills"></h2></div>
 
 <div class="row col-3 knight">
 <button class="text-capitalize" data-i18n="lance" name="roll_lance" type="roll" value="&{template:rolls} {{header=^{lance}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{lance}[Threshold]]]}}"></button>
@@ -1295,7 +1316,7 @@
 </fieldset>
 </div>
 
-<div class="row"><h2 class="text-primary" data-i18n="missiles"></h2></div>
+<div class="row"><h2 class="text-primary" data-i18n="missile skills"></h2></div>
 
 <div class="row col-3 knight">
 <button class="text-capitalize" data-i18n="bow" name="roll_bow" type="roll" value="&{template:rolls} {{header=^{bow}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{bow}[Threshold]]]}}"></button>
@@ -1318,7 +1339,7 @@
 </label>
 </div>
 <div class="row col-3">
-<button class="text-capitalize" data-i18n="thrown" name="roll_thrown" type="roll" value="&{template:rolls} {{header=^{thrown}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{thrown}[Threshold]]]}}"></button>
+<button class="text-capitalize" data-i18n="thrown weapons" name="roll_thrown" type="roll" value="&{template:rolls} {{header=^{thrown}}} {{dice=[[1d20[Roll]]]}} {{threshold=[[@{thrown}[Threshold]]]}}"></button>
 <label data-i18n-title="enter thrown" title="enter thrown">
 <input name="attr_thrown" placeholder="#" title="@{thrown}" type="number" value="0"/>
 </label>
