--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -2089,7 +2089,13 @@
                         </tr>
                     </tbody>
                     <tr>
-                        <td><span data-i18n="experience">Experience</span>:<input type="text" name="attr_experience" style="width: 90px;"></td>
+                        <td>
+                            <div class="input-group">
+                                <span data-i18n="experience">Experience</span>
+                                <span>:</span>
+                                <input type="text" name="attr_experience">
+                            </div>
+                        </td>
                     </tr>
                     <tr>
                         <td><span class="2nd"><span data-i18n="beats">Beats</span>: <span class="healthboxcontainer"><input type="checkbox" class="checkbox" name="attr_beat_box1"><span></span></span><span class="healthboxcontainer"><input type="checkbox" class="checkbox" name="attr_beat_box2"><span></span></span><span class="healthboxcontainer"><input type="checkbox" class="checkbox" name="attr_beat_box3"><span></span></span><span class="healthboxcontainer"><input type="checkbox" class="checkbox" name="attr_beat_box4"><span></span></span><span class="healthboxcontainer"><input type="checkbox" class="checkbox" name="attr_beat_box5"><span></span></span></span></td>
