add label for krewe archetype

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -252,7 +252,8 @@
         <input type="text" name="attr_Chronicle">
         <!-- Row 2 -->
         <div class="input-label">
-            <span class="mortal1 mortal2 vampire werewolf mage promethean changeling geist mummy hunter demon" data-i18n="player">Player:</span>
+            <span class="mortal1 mortal2 vampire werewolf mage promethean changeling geist1 mummy hunter demon" data-i18n="player">Player:</span>
+            <span class="geist2-organization" data-i18n="archtype">Archetype:</span>
         </div>
         <input type="text" name="attr_Age">
         <div class="spacer"></div>
