updated customd3-6 button title text

--- a/Pathfinder Community/pathfinder_community.html
+++ b/Pathfinder Community/pathfinder_community.html
@@ -13271,7 +13271,7 @@
 							<span ><input class="sheet-entry-custom-header" type="text" value="" data-i18n-placeholder="user-defined"  name="attr_customd3-name" title="@{customd3-name}"  /></span>
 							<div class="sheet-custom-roll-inner">
 							<div class="sheet-custom-buttons">
-								<button type="roll" name="roll_customd3_roll" class="sheet-command-button" value="@{PC-whisper} @{customd3}" title="%{selected|customd3}">&nbsp;<span name="attr_customd3-name" /></button>
+								<button type="roll" name="roll_customd3_roll" class="sheet-command-button" value="@{PC-whisper} @{customd3}" title="%{selected|customd3_roll}">&nbsp;<span name="attr_customd3-name" /></button>
 								<br>
 								<button type="roll" name="roll_NPC-customd3_roll" class="sheet-command-button" value="@{NPC-whisper} @{customd3}" title="%{selected|NPC-customd3}"><span data-i18n="npc">NPC</span>&nbsp;<span name="attr_customd3-name" /></button>
 							</div>
@@ -13282,7 +13282,7 @@
 							<span ><input class="sheet-entry-custom-header" type="text" value="" data-i18n-placeholder="user-defined"  name="attr_customd4-name" title="@{customd4-name}"  /></span>
 							<div class="sheet-custom-roll-inner">
 							<div class="sheet-custom-buttons">
-								<button type="roll" name="roll_customd4_roll" class="sheet-command-button" value="@{PC-whisper} @{customd4}" title="%{selected|customd4}">&nbsp;<span name="attr_customd4-name" /></button>
+								<button type="roll" name="roll_customd4_roll" class="sheet-command-button" value="@{PC-whisper} @{customd4}" title="%{selected|customd4_roll}">&nbsp;<span name="attr_customd4-name" /></button>
 								<br>
 								<button type="roll" name="roll_NPC-customd4_roll" class="sheet-command-button" value="@{NPC-whisper} @{customd4}" title="%{selected|NPC-customd4}"><span data-i18n="npc">NPC</span>&nbsp;<span name="attr_customd4-name" /></button>
 							</div>
@@ -13293,7 +13293,7 @@
 							<span ><input class="sheet-entry-custom-header" type="text" value="" data-i18n-placeholder="user-defined"  name="attr_customd5-name" title="@{customd5-name}"  /></span>
 							<div class="sheet-custom-roll-inner">
 							<div class="sheet-custom-buttons">
-								<button type="roll" name="roll_customd5_roll" class="sheet-command-button" value="@{PC-whisper} @{customd5}" title="%{selected|customd5}">&nbsp;<span name="attr_customd5-name" /></button>
+								<button type="roll" name="roll_customd5_roll" class="sheet-command-button" value="@{PC-whisper} @{customd5}" title="%{selected|customd5_roll}">&nbsp;<span name="attr_customd5-name" /></button>
 								<br>
 								<button type="roll" name="roll_NPC-customd5_roll" class="sheet-command-button" value="@{NPC-whisper} @{customd5}" title="%{selected|NPC-customd5}"><span data-i18n="npc">NPC</span>&nbsp;<span name="attr_customd5-name" /></button>
 							</div>
@@ -13304,7 +13304,7 @@
 							<span ><input class="sheet-entry-custom-header" type="text" value="" data-i18n-placeholder="user-defined"  name="attr_customd6-name" title="@{customd6-name}"  /></span>
 							<div class="sheet-custom-roll-inner">
 							<div class="sheet-custom-buttons">
-								<button type="roll" name="roll_customd6_roll" class="sheet-command-button" value="@{PC-whisper} @{customd6}" title="%{selected|customd6}">&nbsp;<span name="attr_customd6-name" /></button>
+								<button type="roll" name="roll_customd6_roll" class="sheet-command-button" value="@{PC-whisper} @{customd6}" title="%{selected|customd6_roll}">&nbsp;<span name="attr_customd6-name" /></button>
 								<br>
 								<button type="roll" name="roll_NPC-customd6_roll" class="sheet-command-button" value="@{NPC-whisper} @{customd6}" title="%{selected|NPC-customd6}"><span data-i18n="npc">NPC</span>&nbsp;<span name="attr_customd6-name" /></button>
 							</div>
@@ -14111,7 +14111,7 @@
     </div>
 	<div data-i18n-aria-label="footer-aria" class="sheet-footer" aria-label="Help links and footer information">
 		<div class="sheet-table">
-			<span data-i18n="footer-info">Created by Samuel Marino w/contributions by Vince, Chris Buchholz, Magik, James W. | Last updated:</span> <i>Sun Apr 05 2020 22:28:23 GMT &nbsp;&nbsp;</i>v.<input type="text" style="width:3em; height:1.4em; vertical-align:top; padding:0 0.2rem 0 0.2rem; border:none" name="attr_PFSheet_Version" value="0" class="sheet-calc sheet-number" readonly="" title="A non-blank version indicates attributes have been successfully recalculated.">
+			<span data-i18n="footer-info">Created by Samuel Marino w/contributions by Vince, Chris Buchholz, Magik, James W. | Last updated:</span> <i>Sun Apr 05 2020 22:41:34 GMT &nbsp;&nbsp;</i>v.<input type="text" style="width:3em; height:1.4em; vertical-align:top; padding:0 0.2rem 0 0.2rem; border:none" name="attr_PFSheet_Version" value="0" class="sheet-calc sheet-number" readonly="" title="A non-blank version indicates attributes have been successfully recalculated.">
 		</div>
 		<div class="sheet-table" style="margin-top:-.5em;">
 			<span class="sheet-table-cell sheet-3col"><button type="roll" class="sheet-no-decoration" data-i18n-title="url-link"  style="color:#0000ff" name="roll_blank" value="https://tinyurl.com/PFRoll20Thread6"><b style="font-size:1.1rem;" data-i18n="questions-feedback">Questions/Feedback?</b></button></span>
