getting partials to work

--- a/Ironsworn_v2/precompiled/html/index.html
+++ b/Ironsworn_v2/precompiled/html/index.html
@@ -1,7 +1,3 @@
 
-<rolltemplate class="sheet-rolltemplate-ironsworn_oracles">${require('./roll-templates/ironsworn-oracles.html')}</rolltemplate>
-<rolltemplate class="sheet-rolltemplate-ironsworn_moves">${require('./roll-templates/ironsworn-moves.html')}</rolltemplate>
-<rolltemplate class="sheet-rolltemplate-ironsworn_delve_rarity">${require('./roll-templates/delve-rarity.html')}</rolltemplate>
-<rolltemplate class="sheet-rolltemplate-ironsworn_delve_oracles">${require('./roll-templates/delve-oracles.html')}</rolltemplate>
-<rolltemplate class="sheet-rolltemplate-ironsworn_delve_moves">${require('./roll-templates/delve-moves.html')}</rolltemplate>
-<script type="text/worker">${require('./workers/ironsworn.js')}</script>
+<div><%= require('html-loader!./pages/ironsworn/index.html') %></div>
+<div><%= require('html-loader!./pages/delve/index.html') %></div>
