--- a/Ironsworn_v2/precompiled/html/pages/ironsworn/index.html
+++ b/Ironsworn_v2/precompiled/html/pages/ironsworn/index.html
@@ -1,5 +1,15 @@
 
-<div class="sheet-ironsworn-mode">${require('../../components/character-details/details.html')}</div>
-<div class="sheet-ironsworn-mode">${require('../../components/character-details/stats.html')}</div>
-<div class="sheet-ironsworn-mode">${require('../../components/character-details/debilities.html')}</div>
-<div class="sheet-ironsworn-mode">${require('../../components/character-details/momentum.html')}</div>
+<input class="sheet-hidden-flex sheet-ironsworn-index" type="radio" name="attr_mode"/>
+<div class="sheet-ironsworn-index sheet-hidden-flex">
+  <div class="sheet-ironsworn-mode"><%= require('html-loader!../../components/character-details/details.html') %></div>
+  <div class="sheet-ironsworn-mode"><%= require('html-loader!../../components/nav/ironsworn-pages.html') %></div>
+  <div class="sheet-ironsworn-mode"><%= require('html-loader!./assets.html') %></div>
+  <div class="sheet-ironsworn-mode"><%= require('html-loader!./bonds.html') %></div>
+  <div class="sheet-ironsworn-mode"><%= require('html-loader!./moves.html') %></div>
+  <div class="sheet-ironsworn-mode"><%= require('html-loader!./oracles.html') %></div>
+  <div class="sheet-ironsworn-mode"><%= require('html-loader!./progress.html') %></div>
+  <div class="sheet-ironsworn-mode"><%= require('html-loader!./summary.html') %></div>
+  <div class="sheet-ironsworn-mode"><%= require('html-loader!./vows.html') %></div>
+  <div class="sheet-ironsworn-mode"><%= require('html-loader!../../components/nav/ironsworn-bar.html') %></div>
+  <div class="sheet-ironsworn-mode"><%= require('html-loader!../../components/character-details/momentum.html') %></div>
+</div>
