move and fix npc sheet

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1868,15 +1868,15 @@
         <div class="pc-box small-box">
           <div class="row-long">
             <h3 data-i18n="primarylifestyle"></h3>
-            <input name="attr_primary_lifestyle" placeholder="Middle /w GRID subscription" style="width: 77%" title="@{primary_lifestyle}" type="text"/>
+            <input class="text-left" name="attr_primary_lifestyle" placeholder="Middle /w GRID subscription" style="width: 77%" title="@{primary_lifestyle}" type="text"/>
           </div>
           <div class="row-long">
             <h3 data-i18n="nuyen"></h3>
-            <input type="text" name="attr_primary_nuyen" placeholder="$1,000 UCAS" style="width: 90%" title="@{primary_nuyen}"/>
+            <input class="text-left" type="text" name="attr_primary_nuyen" placeholder="$1,000 UCAS" style="width: 90%" title="@{primary_nuyen}"/>
           </div>
           <div class="row-long">
             <h3 data-i18n="licenses"></h3>
-            <input type="text" name="attr_primary_licenses" placeholder="Technomancer, Pistols..." style="width: 87%" title="@{primary_licenses}"/>
+            <input class="text-left" type="text" name="attr_primary_licenses" placeholder="Technomancer, Pistols..." style="width: 87%" title="@{primary_licenses}"/>
           </div>
           <div class="row-long headers">
             <h2 data-i18n="fakeidsrelated"></h2>
@@ -2401,7 +2401,6 @@
   </div>
   <div class="mid body">
     <div class="column">
-      <h1 class="settings" data-i18n="bonuses">Bonuses</h1>
       <input name="attr_pr" type="hidden" value=""/>
       <div class="rows grunt">
         <h2 data-i18n="pr">Professional Rating</h2><span name="attr_pr" style="margin-left: 2%;"></span>
@@ -2409,6 +2408,7 @@
           <input name="attr_pr" title="@{pr}" type="number"/>
         </label>
       </div>
+      <h1 class="settings" data-i18n="bonuses">Bonuses</h1>
       <div class="rows grunt">
         <button data-i18n="initiative" name="Initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{initiative}}}{{base=^{base}}}{{dice=[[((@{initiative_mod})+@{wounds_toggle}+@{modifiers_toggle})+(@{initiative_dice})d6cf0 &{tracker}]]}}">Initiative</button>
         <label class="settings" data-i18n-title="modifier" title="modifier">
@@ -2528,18 +2528,18 @@
       </div>
     </div>
     <div class="column">
-      <h1 class="settings" data-i18n="modifier">Modifier</h1>
       <div class="rows">
         <button data-i18n="armorrating" name="roll_armorrating" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{armorrating}}}{{base=base}}{{dice=[[((@{armor_rating})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}">armorrating</button>
         <label class="settings" data-i18n-title="armorrating" title="armorrating">
           <input name="attr_armor_rating" placeholder="9" title="@{armor_rating}" type="number" value="0"/>
         </label>
       </div>
+      <h1 class="settings" data-i18n="modifier">Modifier</h1>
       <div class="rows">
         <button data-i18n="defense" name="roll_defense" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{defense}}}{{base=base}}{{dice=[[((@{defense})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}">defense</button>
         <label class="settings" data-i18n-title="defense" title="defense">
           <input name="attr_defense_modifier" placeholder="9" title="@{defense_modifier}" type="number" value="0"/>
-        </label>
+        </label><span class="settings tiny-span">=</span><span name="attr_defense"></span>
       </div>
       <div class="rows">
         <button data-i18n="soak" name="roll_soak" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{soak}}}{{base=base}}{{dice=[[((@{soak}+@{soak_modifier})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}">soak</button>
