--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -4338,7 +4338,7 @@
 							<option value="@{GE_Wert}" selected="selected" data-i18n="GE">GE</option><option value="@{KO_Wert}" data-i18n="KO">KO</option><option value="@{KK_Wert}" data-i18n="KK">KK</option>
 							</select></td>
 					<td data-i18n="Ja">Ja</td>
-					<td align="center">D</td>
+					<td align="center">C</td>
 					<td><input type="number" name="attr_Verbergen_FW" value="0" min="0"></td>
 					<td><input type="text" name="attr_Verbergen_Anmerkung"></td>
 					<td><input type="number" name="attr_Verbergen_Mod" disabled="true" value="@{Zustand_Mod_max_inkl_BE} + @{nachteil_fettleibig}"></td>
