Fixed Silver Pieces

--- a/DnD_Original_DnD/DnD_ODnD.html
+++ b/DnD_Original_DnD/DnD_ODnD.html
@@ -148,7 +148,7 @@
           <span class="flex-col fill"><label>G.</label><input class="attr fill" type="text" name="attr_coin_gold" title="@{Gold}" /></span>
         </div>
         <div class="flex-row">
-          <span class="flex-col fill"><label>E.</label><input class="attr fill" type="text" name="attr_coin_silver" title="@{Silver}" /></span>
+          <span class="flex-col fill"><label>S.</label><input class="attr fill" type="text" name="attr_coin_silver" title="@{Silver}" /></span>
         </div>
         <div class="flex-row">
           <span class="flex-col fill"><label>C.</label><input class="attr fill" type="text" name="attr_coin_copper" title="@{Copper}" /></span>
