fix missed merge changes

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -1921,7 +1921,7 @@
                             <td class="spacer"></td>
                         </tr>
                     </tbody>
-                    <tbody class="geist2-inverse">
+                    <tbody class="mortal1 mortal2 vampire werewolf mage promethean changeling hunter geist1 mummy demon beast">
                         <tr>
                             <td class="subheader">
                                 <span class="mortal1 hunter1" data-i18n="morality" >Morality</span>
@@ -1976,7 +1976,7 @@
                             </table>
                         </td>
                     </tr>
-                    <tr class="mortal2-organization vampire werewolf mage promethean changeling geist1 geist2-organization mummy demon beast">
+                    <tr class="mortal2-organization vampire werewolf mage promethean changeling geist mummy demon beast">
                         <td>
                             <table class="potency">
                                 <tr>
