--- a/Splittermond/Sheet.html
+++ b/Splittermond/Sheet.html
@@ -2532,7 +2532,7 @@
                                 <li>&Ouml;ffne die XML-Datei im Genesis-Ordner <font size="6">(z.B: C:\Users\[Username]\AppData\Roaming\rpgframework\player\myself\splittermond\[Charaktername])</font></li>
                                 <li>Kopiere den Inhalt der XML-Datei in einen der frei verf&uuml;gbaren XML-JSON-Konverter, z.B.: <input type="text" value="https://codebeautify.org/xmltojson"/></li>
                                 <li>Kopiere den umgewandelten JSON-String in das unten stehende Textfeld</li>
-                                <li>Klicke auf "Import starten" (der Import kann ein paar Sekunden dauern)</li>
+                                <li>Klicke auf "Import starten"</li>
                             </ol>
                         </div>
                     </td>
@@ -5028,6 +5028,7 @@ on("change:waffenexakt_creature2 change:waffenkreatur_schaden12 change:waffenkri
 
 on("change:repeating_waffennsc:waffenscharf change:waffennsc_waffenkritisch change:repeating_waffennsc:waffenexakt change:repeating_waffennsc:waffenschaden1nsc change:repeating_waffennsc:waffenschadenwuerfelnsc change:repeating_waffennsc:waffenschaden3nsc change:repeating_waffennsc:waffennamensc", function(eventInfo) {
     getAttrs(["repeating_waffennsc_waffenexakt", "repeating_waffennsc_waffenkritisch", "repeating_waffennsc_waffenscharf", "repeating_waffennsc_waffenschaden1nsc", "repeating_waffennsc_waffenschadenwuerfelnsc", "repeating_waffennsc_waffenschaden3nsc"], function(v) {
+        console.log("Bla");
         let exakt = v["repeating_waffennsc_waffenexakt"];
         let scharf = v["repeating_waffennsc_waffenscharf"];
         let kritisch = v["repeating_waffennsc_waffenkritisch"];
@@ -5039,6 +5040,7 @@ on("change:repeating_waffennsc:waffenscharf change:waffennsc_waffenkritisch chan
         if (+exakt < 0) { exakt = 0; }
         if (+kritisch < 0) { kritisch = 0; }
         if (+kritisch > 0) {
+            console.log("Blubb");
             die_max = waffenschadenwuerfel.substr(1);
             die_minus = +waffenschadenwuerfel.substr(1) - 1;
             if ((+waffenschaden1 + +exakt) == 1) {
@@ -5310,20 +5312,15 @@ on("clicked:startimport", function(f) {
                     default:
                         setAttrs({gender: "Undefiniert"});
                 }
-                setAttrs({epeingesetzt: characterData["_expinv"] || 0});
-                let epeingesetzt = characterData["_expinv"] || 0;
-                setAttrs({epgesamt: (+characterData["_expinv"] || 0) + +characterData["_expfree"] });
-                let hg = 0;
-                if (+epeingesetzt >= 100 && +epeingesetzt < 300) { hg = 2; } 
-                else if (+epeingesetzt >= 300 && +epeingesetzt < 600) { hg = 3; }
-                if (+epeingesetzt >= 600) { hg = 4; }
-                setAttrs({heldengrad: +hg});
+                
                 setAttrs({haarfarbe: characterData["hairColor"]});
                 setAttrs({augenfarbe: characterData["eyeColor"]});
                 setAttrs({geburtsort: characterData["birthPlace"]});
                 setAttrs({groesse: characterData["size"]});
                 setAttrs({gewicht: characterData["weight"]});
                 setAttrs({mondzeichen: translateGenesis(characterData["_splinter"])});
+                setAttrs({epeingesetzt: characterData["_expinv"] || 0});
+                setAttrs({epgesamt: (+characterData["_expinv"] || 0) + +characterData["_expfree"] });
                 setAttrs({abstammung: translateGenesis(characterData["_bground"])});
                 setAttrs({ausbildung: translateGenesis(characterData["_edu"])});
                 setAttrs({rasse: translateGenesis(characterData["_race"])});
